--- a/index.html
+++ b/index.html
@@ -77,13 +77,6 @@ html,body{overflow-y:auto;overflow-x:hidden;}
     .table td[data-key="contenedor"]{white-space:normal;}
     .clamp2{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;word-break:break-word;}
     .clamp3{display:-webkit-box;-webkit-line-clamp:3;-webkit-box-orient:vertical;overflow:hidden;word-break:break-word;white-space:normal;}
-
-    /* TABLERO: resaltar contenedores con INDICACIÓN que incluya "CONFRONTA" */
-    #boardView .confrontaCont{
-      color:#ff3b3b !important;
-      font-weight:800 !important;
-    }
-
     /* INDICACIÓN: 2 renglones (forzados) y ancho proporcional */
     #boardView th[data-key="indicacion"], #boardView td[data-key="indicacion"]{
       white-space: normal !important;
@@ -1189,10 +1182,6 @@ MARIA LOPEZ
   // ------------------- Helpers UI -------------------
   const el = (id)=>document.getElementById(id);
 
-  function hasConfronta(ind){
-    return String(ind || '').toUpperCase().includes('CONFRONTA');
-  }
-
   function esc(s){
     return String(s ?? '').replace(/[&<>"']/g, c=>({
       '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'
@@ -2087,7 +2076,7 @@ async function fetchRows(range){
     el('tbody').innerHTML = rows.map((r,i)=>`
       <tr data-id="${r.id}">
         <td data-key="folio" class="mono">${i+1}</td>
-        <td data-key="contenedor" class="mono"><div class="clamp2 ${hasConfronta(r.indicacion)?\'confrontaCont\':\'\'}">${esc(r.contenedor)}</div></td>
+        <td data-key="contenedor" class="mono"><div class="clamp2">${esc(r.contenedor)}</div></td>
         <td data-key="cuenta">${esc(r.cuenta)}</td>
         <td data-key="cedis">${esc(r.cedis)}</td>
         <td data-key="status">${statusPill(r.status)}</td>
