--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@ html,body{overflow-y:auto;overflow-x:hidden;}
     .table th[data-key="contenedor"], .table td[data-key="contenedor"]{width:25ch;max-width:25ch;}
     .table td[data-key="contenedor"]{white-space:normal;}
     .clamp2{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;word-break:break-word;}
+  .confrontaCont{color:#ff3b3b;font-weight:800;}
+
     .clamp3{display:-webkit-box;-webkit-line-clamp:3;-webkit-box-orient:vertical;overflow:hidden;word-break:break-word;white-space:normal;}
     /* INDICACIÓN: 2 renglones (forzados) y ancho proporcional */
     #boardView th[data-key="indicacion"], #boardView td[data-key="indicacion"]{
@@ -2054,6 +2056,8 @@ async function fetchRows(range){
 
 
 
+  function isConfronta(ind){ return (ind ?? '').toString().toLowerCase().includes('confronta'); }
+
   function renderBoard(){
     const range = getWorkRange();
     const q = (el('q').value || '').trim();
@@ -2076,7 +2080,7 @@ async function fetchRows(range){
     el('tbody').innerHTML = rows.map((r,i)=>`
       <tr data-id="${r.id}">
         <td data-key="folio" class="mono">${i+1}</td>
-        <td data-key="contenedor" class="mono"><div class="clamp2">${esc(r.contenedor)}</div></td>
+        <td data-key="contenedor" class="mono ${isConfronta(r.indicacion)?'confrontaCont':''}"><div class="clamp2">${esc(r.contenedor)}</div></td>
         <td data-key="cuenta">${esc(r.cuenta)}</td>
         <td data-key="cedis">${esc(r.cedis)}</td>
         <td data-key="status">${statusPill(r.status)}</td>
